force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/bizible2__Bizible_Touchpoint__c.object-meta.xml
<CustomObject>
    <label>Bizible Touchpoint</label>
    <nameField>
        <label>Bizible Touchpoint</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Touchpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>