force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Account__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bizible Touchpoints</relationshipLabel>
    <relationshipName>Bizible_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>