force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Ad_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Ad_Campaign_Id__c</fullName>
    <label>Ad Campaign Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>