force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Bizible_Person__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Bizible_Person__c</fullName>
    <label>Person Id</label>
    <referenceTo>bizible2__Bizible_Person__c</referenceTo>
    <relationshipLabel>Bizible Touchpoint</relationshipLabel>
    <relationshipName>Bizible_Touchpoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>