force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Case__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bizible Touchpoint</relationshipLabel>
    <relationshipName>Bizible_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>