force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Contact__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bizible Touchpoint</relationshipLabel>
    <relationshipName>Bizible_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>