force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Form_URL__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Form_URL__c</fullName>
    <label>Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>