force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Geo_City__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Geo_City__c</fullName>
    <description>The city that the user is located in while engaged in the activity</description>
    <inlineHelpText>The city that the user is located in while engaged in the activity</inlineHelpText>
    <label>Geo City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>