force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Keyword_MatchType__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Keyword_MatchType__c</fullName>
    <description>The level of matching with the keyword (ex. phrase, broad)</description>
    <inlineHelpText>The level of matching with the keyword (ex. phrase, broad)</inlineHelpText>
    <label>Keyword MatchType</label>
    <length>15</length>
    <type>Text</type>
</CustomField>