force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Keyword_Text__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Keyword_Text__c</fullName>
    <description>Keywords chosen by the advertiser that match the user&apos;s search results</description>
    <inlineHelpText>Keywords chosen by the advertiser that match the user&apos;s search results</inlineHelpText>
    <label>Keyword Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>