force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Medium__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Medium__c</fullName>
    <description>The channel being used (ex. web, search, email)</description>
    <inlineHelpText>The channel being used (ex. web, search, email), set within the UTM parameter</inlineHelpText>
    <label>Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>