force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Search_Phrase__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Search_Phrase__c</fullName>
    <description>The term(s) that the user entered to view the search results</description>
    <inlineHelpText>The term(s) that the user entered to view the search results</inlineHelpText>
    <label>Search Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>