force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Touchpoint_Position__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Position__c</fullName>
    <description>The order in which the touchpoint occurred</description>
    <inlineHelpText>The order in which the touchpoint occurred</inlineHelpText>
    <label>Touchpoint Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>