force-app/main/default/objects/bizible2__Bizible_Touchpoint__c/fields/bizible2__Touchpoint_Source__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Source__c</fullName>
    <description>The specific origin of the touchpoint</description>
    <inlineHelpText>The specific origin of the touchpoint</inlineHelpText>
    <label>Touchpoint Source</label>
    <length>60</length>
    <type>Text</type>
</CustomField>